--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Unit Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Linting
-        run: docker-composer run --rm app sh -c "flake8"
+        run: docker-compose run --rm app sh -c "flake8"
